fixed some bugs an i will fix the database